add bonus_project_bdm